--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,10 @@ h2.card2{
   margin-left: auto;
   margin-right: auto;
 }
+
+h1.projectHeader{
+  font-size: 5rem;
+  text-align: center;
+  border: 2px solid black;
+
+}
